--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
   "dependencies": {
     "@braid/vue-formulate-i18n": "^1.16.0",
     "is-plain-object": "^3.0.1",
-    "is-url": "^1.2.4",
-    "nanoid": "^3.1.30"
+    "is-url": "^1.2.4"
   }
 }
